brussels road shields

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3107,7 +3107,9 @@ layers:
                                 /^motorway.*$/.test(feature.network) ||
                                 /^no:Fylkesvei.*$/.test(feature.network) ||
                                 /^no:Fylkesvei .*$/.test(feature.network)||
-                                /^pe:national.*$/.test(feature.network)
+                                /^pe:national.*$/.test(feature.network) ||
+                                /^BE:A-road.*$/.test(feature.network) ||
+                                /^BE:N-road.*$/.test(feature.network)
                             )
                         }
                     draw:
@@ -3948,21 +3950,20 @@ layers:
                                 text:
                                     offset: [0px, 3px]
 
-                    BE:A-road:
+                    BE:A-N-road:
                         filter: |
                             function() {
                                 return feature.shield_text && (
-                                    /^pe:national$/.test(feature.network)
+                                    /^BE:A-road$/.test(feature.network) ||
+                                    /^BE:N-road$/.test(feature.network)
                                 )
                             }
                         draw:
                             mapzen_icon_library:
                                 sprite: |
                                     function() {
-                                        return ( 'PE:PE-' + feature.shield_text.length + 'char');
+                                        return ( 'DE:L-' + feature.shield_text.length + 'char');
                                     }
-                                text:
-                                    offset: [0px, 3px]
 
                 z-mexico-shields:
                     filter: |
